# crypto-trading-simulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  build_commit_history.sh  build_commit_history_part2.sh  build_commit_history_part3.sh  build_commit_history_part4.sh  build_commit_history_part5.sh  config.txt  create_git_history.sh  crypto_sim_modular  crypto_simulator  fix_git_history.sh  manual_git_commands.txt
src/: main.cpp  main_modular.cpp
src/docs/: API_Documentation.md  Feature_Specifications.md
src/include/: Config.h  Logger.h  MarketData.h  Portfolio.h  PriceAlert.h  TradeEngine.h  TradingStats.h  Types.h  User.h  UserManager.h
src/market/: MarketData.cpp
src/portfolio/: Portfolio.cpp
src/tests/: test_market_data.cpp  test_performance.cpp  test_portfolio.cpp  test_trade_engine.cpp
src/trading/: TradeEngine.cpp
src/user/: User.cpp  UserManager.cpp
src/utils/: Config.cpp  CryptoUtils.cpp  HolidayTheme.cpp  Logger.cpp  PriceAlert.cpp  TradingStats.cpp
